--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/fiko942/backlink#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "ytdl-core": "^4.11.2"
   }
